fix style issues in row adder box where inputs were not aligning on window resize

--- a/src/styles/movimentos.css
+++ b/src/styles/movimentos.css
@@ -109,7 +109,7 @@
     color: rgba(54, 51, 51, 0.311);
     user-select: none;
 }
-.adder-td{
+.adder-td, .adder-desig-input{
     min-width: 80px;
     height: 30px;
 
@@ -118,17 +118,18 @@
 .adder-date-div{
     display: flex;
     background-color: white;
-
+    /* border: 1px solid rgba(25, 0, 255, 0.423); */
 }
 
 .adder-date-input{
     width: calc(100% / 3);
-
+    border-radius: 4px;
 
 }
 
 .adder-date-input:nth-child(1){
     border-right: none;
+
 }
 .adder-date-input:nth-child(3){
     border-left: none;
@@ -146,7 +147,9 @@
 
 }
 
-
+.adder-input-focus{
+    border: 1px solid rgba(25, 0, 255, 0.423);
+}
 .adder-desig-div{
 
     display: flex;
@@ -180,19 +183,19 @@
 
 .new-row-arrow{
     grid-column: 2 / 3;
-    width: 60px;
-    filter:blur(1px) drop-shadow(0px 2px 3px rgba(12, 212, 215, 0.359));
+    width: 50px;
+    filter:blur(1px) drop-shadow(0px 2px 3px rgba(12, 212, 215, 0.159));
     cursor: pointer;
     -webkit-user-drag: none;
 }
 
 .new-row-arrow:hover{
     transform: scale(1.05);
-    filter:blur(1px) drop-shadow(0px 2px 6px rgb(12, 211, 215, 0.6));
+    filter:blur(1px) drop-shadow(0px 2px 6px rgb(12, 211, 215, 0.3));
 }
 .new-row-arrow:active{
     transform: scale(1);
-    filter:blur(1px) drop-shadow(0px 0px 1px rgb(2, 131, 133, 0.4));
+    filter:blur(1px) drop-shadow(0px 0px 1px rgb(2, 131, 133, 0.1));
 }
 
 
